changed name of prokject to LearnWebCode

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: LittletonVogel
+Theme Name: LearnWebCode
 Author: Matthew Mauney
 Author URI: https://github.com/mauney
 Version: 1.0
