--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ Author URI: https://github.com/mauney
 Version: 1.0
 */
 
+:root {
+    --main-blue: #006ec3;
+}
+
 html {
 	padding: 0;
 	margin: 0;
@@ -20,7 +24,7 @@ body {
 
 a:link,
 a:visited {
-    color: #006ec3;
+    color: var(--main-blue);
 }
 
 p {
@@ -117,7 +121,7 @@ article.post:last-of-type {
 .site-header nav ul li.current-page-ancestor a:link,
 .site-header nav ul li.current-page-ancestor a:visited {
     font-weight: bold;
-    background-color: #006ec3;
+    background-color: var(--main-blue);
     color: #FFF;
 }
 
